crates/ringkernel-derive/tests/compile_fail/ring_message_on_tuple_struct.stderr
error: Unsupported shape `unnamed fields`. Expected named fields.
 --> tests/compile_fail/ring_message_on_tuple_struct.rs:4:24
  |
4 | #[derive(Debug, Clone, RingMessage, rkyv::Archive, rkyv::Serialize, rkyv::Deserialize)]
  |                        ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `RingMessage` (in Nightly builds, run with -Z macro-backtrace for more info)
